force-app/main/default/objects/encompass_By_EM__Asset__c/encompass_By_EM__Asset__c.object-meta.xml
<CustomObject>
    <label>Asset</label>
    <nameField>
        <displayFormat>Asset-{00000000}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>