force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Account_Holder__c</fullName>
    <label>Account Holder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>