force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Account_Number__c</fullName>
    <label>Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>