force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__Account_Value__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Account_Value__c</fullName>
    <label>Account Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>