force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__Asset_External_Id__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Asset_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Asset External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>