force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__Asset_For__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Asset_For__c</fullName>
    <label>Asset For</label>
    <length>10</length>
    <type>Text</type>
</CustomField>