force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__Depository_Name__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__Depository_Name__c</fullName>
    <label>Depository Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>