force-app/main/default/objects/encompass_By_EM__Asset__c/fields/encompass_By_EM__IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>encompass_By_EM__IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>